--- a/typescript-react-monorepo/packages/app1/tsconfig.json
+++ b/typescript-react-monorepo/packages/app1/tsconfig.json
@@ -17,6 +17,5 @@
     "noEmit": false,
     "jsx": "react-jsx"
   },
-  "include": ["**/*.ts", "**/*.tsx", "*.d.ts", "**/*.js", "src", "@mf-types"],
-  "exclude": ["node_modules"]
+  "include": ["src"]
 }
