--- a/typescript-react-monorepo/packages/app1/package.json
+++ b/typescript-react-monorepo/packages/app1/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "host",
+  "name": "app1",
   "version": "1.0.0",
-  "description": "host project for import remote package",
-  "main": "./src/index.js",
+  "description": "app1 package",
   "author": "m.rastegar",
   "license": "MIT",
   "dependencies": {
@@ -19,18 +18,19 @@
     "tscheck": "tsc"
   },
   "devDependencies": {
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
-    "babel-loader": "9.1.2",
-    "core-js": "3.30.1",
-    "dotenv": "16.0.3",
-    "html-webpack-plugin": "5.5.0",
-    "regenerator-runtime": "0.13.11",
-    "ts-loader": "9.4.2",
-    "typescript": "4.9.5",
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.11.1",
-    "webpack-merge": "5.8.0"
+    "@module-federation/typescript": "^2.3.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "babel-loader": "^9.1.2",
+    "core-js": "^3.28.0",
+    "html-webpack-plugin": "^5.5.0",
+    "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.13.11",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
