--- a/angular11-microfrontends-ngrx/projects/mdmf-shared/package.json
+++ b/angular11-microfrontends-ngrx/projects/mdmf-shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdmf-shared",
+  "name": "ngrx-mdmf-shared",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^11.0.0-rc.2",
