--- a/modernjs/host/package.json
+++ b/modernjs/host/package.json
@@ -32,18 +32,18 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
+    "@modern-js-app/eslint-config": "2.24.1",
     "@modern-js/app-tools": "2.24.1",
     "@modern-js/eslint-config": "2.24.1",
     "@modern-js/tsconfig": "2.24.1",
-    "@modern-js-app/eslint-config": "2.24.1",
-    "lint-staged": "13.1.4",
-    "prettier": "2.8.8",
-    "husky": "8.0.3",
-    "rimraf": "3.0.2",
-    "typescript": "4.9.5",
     "@types/jest": "29.5.2",
     "@types/node": "16.11.68",
     "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11"
+    "@types/react-dom": "18.0.11",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.4",
+    "prettier": "2.8.8",
+    "rimraf": "3.0.2",
+    "typescript": "4.9.5"
   }
 }
