--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
       "./dynamic-system-host/*",
       "./federated-npm",
       "./federated-npm/*",
+      "./federated-express-routes/*",
       "./genesis",
       "./genesis/*",
       "./loadable-react-18",
@@ -177,7 +178,7 @@
     "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "6.6.2",
+    "lerna": "7.1.1",
     "mocha": "10.2.0",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
