update express example

--- a/federated-express-routes/host/package.json
+++ b/federated-express-routes/host/package.json
@@ -66,9 +66,7 @@
     "webpack-shell-plugin": "^0.5.0",
     "webpack-shell-plugin-next": "^2.2.2"
   },
-  "packageManager": "yarn@3.4.1",
   "engines": {
-    "node": ">=16.x",
-    "yarn": ">=3.2.3"
+    "node": ">=16.x"
   }
 }
