update express example

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,5 @@ buildServer
 **/cypress/screenshots/**
 **/cypress/results/**
 **/cypress/report/**
+/federated-express-routes/host/build/
+/federated-express-routes/remote/build/
