--- a/nextjs-v13/shop/package.json
+++ b/nextjs-v13/shop/package.json
@@ -8,7 +8,7 @@
     "start": "next start -p 3002"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.1",
+    "@module-federation/nextjs-mf": "^7.0.2",
     "next": "13.3.1",
     "nextjs-shared": "file:../shared",
     "react": "18.2.0",
