--- a/package.json
+++ b/package.json
@@ -184,6 +184,8 @@
     "wait-on": "7.0.1"
   },
   "scripts": {
+    "list": "lerna ls --all --json",
+    "list:changed": "lerna ls --all --since=origin/master --json",
     "bootstrap": "lerna bootstrap --ignore-scripts",
     "build": "lerna run --parallel build",
     "submodules": "git pull --recurse-submodules",
