fix next ssr example

--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     ],
     "nohoist": [
       "**/@types",
+      "**/@module-federation/**",
       "**/@types/**",
       "**/styled-jsx/**",
       "**/styled-jsx",
