--- a/nextjs-ssr-delegate-modules/home/package.json
+++ b/nextjs-ssr-delegate-modules/home/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^7.0.0",
+    "@module-federation/nextjs-mf": "^7.0.4"
     "@module-federation/utilities": "^2.0.0",
     "lodash": "4.17.21",
     "next": "13.3.1",
