--- a/nextjs-v13/home/package.json
+++ b/nextjs-v13/home/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3001",
+    "dev": "rm -rf .next &&  next dev -p 3001",
     "build": "next telemetry disable && next build",
     "start": "next start -p 3001"
   },
