--- a/nextjs-v12/checkout/package.json
+++ b/nextjs-v12/checkout/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf .next && next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.1",
+    "@module-federation/nextjs-mf": "^7.0.4",
     "next": "12.3.4",
     "nextjs-shared": "file:../shared",
     "react": "18.2.0",
