--- a/nextjs-v13/shop/package.json
+++ b/nextjs-v13/shop/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "rm -rf .next && next dev -p 3002",
     "build": "next build",
     "start": "next start -p 3002"
   },
