--- a/dynamic-remotes-node/package.json
+++ b/dynamic-remotes-node/package.json
@@ -5,13 +5,15 @@
   "license": "MIT",
   "scripts": {
     "serve": "concurrently 'serve -s app1/dist -l 3001' 'serve -s app2/dist -l 3002'",
-    "build": "rimraf dist/server && concurrently 'cd app1; webpack --config ./webpack.config.js' 'cd app2; webpack --config ./webpack.config.js'",
+    "build": "rimraf dist/server && concurrently 'cd app1; webpack --config ./webpack.config.js' 'cd runtime-container; webpack --config ./webpack.config.js'  'cd app2; webpack --config ./webpack.config.js'",
     "start": "yarn build && concurrently 'yarn serve' 'sleep 5 && node app1/dist/main.js'"
   },
   "dependencies": {
     "@module-federation/node": "^0.13.0",
     "@module-federation/utilities": "^1.5.0",
     "concurrently": "^8.0.1",
-    "webpack": "^5.78.0"
+    "webpack": "^5.78.0",
+    "rimraf": "^5.0.1",
+    "webpack-cli": "^5.1.4"
   }
 }
