Add a react example for fallback remote components

--- a/package.json
+++ b/package.json
@@ -124,6 +124,8 @@
       "./typescript-monorepo/*",
       "./typescript-project-references",
       "./typescript-project-references/*",
+      "./typescript-react-fallback",
+      "./typescript-react-fallback/*",
       "./umd-federation",
       "./umd-federation/*",
       "./version-discrepancy",
