--- a/basic-host-remote/package.json
+++ b/basic-host-remote/package.json
@@ -3,18 +3,20 @@
   "private": true,
   "workspaces": [
     "./app1",
-    "./app2"
+    "./app2",
+    "./app3",
+    "./app4"
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=basic-host-remote_app* --parallel start",
+    "start": "concurrently 'cd app3; yarn dev' 'cd app4; yarn dev'",
     "build": "lerna run --scope=basic-host-remote_app* --parallel build",
     "serve": "lerna run --scope=basic-host-remote_app* --parallel serve",
     "clean": "lerna run --scope=basic-host-remote_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "lerna": "3.22.1",
+    "concurrently": "^8.2.1",
     "wait-on": "7.0.1"
   }
 }
