--- a/basic-host-remote/package.json
+++ b/basic-host-remote/package.json
@@ -2,17 +2,15 @@
   "name": "basic-host-remote",
   "private": true,
   "workspaces": [
-    "./app1",
-    "./app2",
     "./app3",
     "./app4"
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently 'cd app3; yarn dev' 'cd app4; yarn dev'",
-    "build": "lerna run --scope=basic-host-remote_app* --parallel build",
-    "serve": "lerna run --scope=basic-host-remote_app* --parallel serve",
-    "clean": "lerna run --scope=basic-host-remote_app* --parallel clean",
+    "start": "concurrently 'cd app1; yarn dev' 'cd app2; yarn dev'",
+    "build": "concurrently 'cd app1; yarn build' 'cd app2; yarn build'",
+    "serve": "concurrently 'cd app1; yarn serve' 'cd app2; yarn serve'",
+    "clean": "concurrently 'cd app1; yarn reset' 'cd app2; yarn reset'",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
