--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -63,7 +63,7 @@ jobs:
         uses: actions/cache@v3
         id: yarn-cache
         with:
-          path: ${{ env.CACHE_PATH }}  
+          path: ${{ env.CACHE_PATH }}
           key: e2e-cache-${{ steps.yarn-hash.outputs.yarnHash }}
 
       - name: Install deps
@@ -72,4 +72,5 @@ jobs:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: |
           echo "Yarn changed - install deps ... "
+          yarn add @rspack/core@latest
           yarn install --frozen-lockfile
