--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -72,5 +72,5 @@ jobs:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: |
           echo "Yarn changed - install deps ... "
-          yarn add @rspack/core@latest
+          yarn add @rspack/core@latest -W
           yarn install --frozen-lockfile
