--- a/bi-directional/app2/package.json
+++ b/bi-directional/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-app4",
+  "name": "basic-app2-xx",
   "version": "0.1.0",
   "scripts": {
     "reset": "npx rimraf ./**/node_modules",
