--- a/multi-threaded-ssr/package.json
+++ b/multi-threaded-ssr/package.json
@@ -8,8 +8,8 @@
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
-    "build": "lerna run build --parallel --scope @multi-threaded-ssr/icarus-2 --scope @multi-threaded-ssr/icarus-1",
-    "clean": "lerna run --scope @multi-threaded-ssr/* --parallel clean"
+    "build": "pnpm --filter build --parallel --scope @multi-threaded-ssr/icarus-2 --scope @multi-threaded-ssr/icarus-1",
+    "clean": "pnpm --filter --scope @multi-threaded-ssr/* --parallel clean"
   },
   "devDependencies": {
     "lerna": "3.22.1"
