--- a/rollup-federation-demo/package.json
+++ b/rollup-federation-demo/package.json
@@ -9,7 +9,7 @@
     ]
   },
   "scripts": {
-    "start": "lerna run --scope=rollup-federation-demo_* start",
+    "start": "pnpm --filter rollup-federation-demo_* start",
     "e2e:ci": "yarn start & wait-on http-get://localhost:8082/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
