--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -7,10 +7,10 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=automatic-vendor-sharing_app* --parallel start",
-    "build": "lerna run --scope=automatic-vendor-sharing_app* --parallel build",
-    "serve": "lerna run --scope=automatic-vendor-sharing_app* --parallel serve",
-    "clean": "lerna run --scope=automatic-vendor-sharing_app* --parallel clean",
+    "start": "pnpm --filter automatic-vendor-sharing_app* --parallel start",
+    "build": "pnpm --filter automatic-vendor-sharing_app* --parallel build",
+    "serve": "pnpm --filter automatic-vendor-sharing_app* --parallel serve",
+    "clean": "pnpm --filter automatic-vendor-sharing_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
