--- a/angular-universal-ssr/package.json
+++ b/angular-universal-ssr/package.json
@@ -13,9 +13,9 @@
     "start:shell": "npm --prefix ./host-app run serve:federation",
     "build:client": "npm --prefix ./client-app run build:federation",
     "start:client": "npm --prefix ./client-app run serve:federation",
-    "build": "lerna run --scope=angular-universal-ssr_* build:federation",
-    "serve": "lerna run --scope=angular-universal-ssr_* --parallel serve:federation",
-    "clean": "lerna run --scope=angular-universal-ssr_* --parallel clean",
+    "build": "pnpm --filter angular-universal-ssr_* build:federation",
+    "serve": "pnpm --filter angular-universal-ssr_* --parallel serve:federation",
+    "clean": "pnpm --filter angular-universal-ssr_* --parallel clean",
     "e2e:test": "npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome",
     "e2e:ci": "node e2e.ci.js"
   },
