--- a/comprehensive-demo-react16/package.json
+++ b/comprehensive-demo-react16/package.json
@@ -10,10 +10,10 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently \"lerna run --scope=comprehensive-demo-react16_app* --parallel start\" \"yarn serve\"",
-    "build": "lerna run --scope=comprehensive-demo-react16_app* build",
-    "serve": "lerna run --scope=comprehensive-demo-react16_app* --parallel serve",
-    "clean": "lerna run --scope=comprehensive-demo-react16_app* --parallel clean",
+    "start": "concurrently \"pnpm --filter comprehensive-demo-react16_app* --parallel start\" \"yarn serve\"",
+    "build": "pnpm --filter comprehensive-demo-react16_app* build",
+    "serve": "pnpm --filter comprehensive-demo-react16_app* --parallel serve",
+    "clean": "pnpm --filter comprehensive-demo-react16_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
