--- a/cra/package.json
+++ b/cra/package.json
@@ -9,11 +9,11 @@
     ]
   },
   "scripts": {
-    "start": "lerna run --scope=cra_* start",
-    "stop": "lerna run --scope=cra_* stop",
-    "build": "lerna run --scope=cra_* build'",
-    "serve": "lerna run --scope=cra_* serve'",
-    "clean": "lerna run --scope=cra_* clean'",
+    "start": "pnpm --filter cra_* start",
+    "stop": "pnpm --filter cra_* stop",
+    "build": "pnpm --filter cra_* build'",
+    "serve": "pnpm --filter cra_* serve'",
+    "clean": "pnpm --filter cra_* clean'",
     "e2e:ci": "yarn start && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && yarn stop"
   },
   "devDependencies": {
