--- a/different-react-versions-16-17/package.json
+++ b/different-react-versions-16-17/package.json
@@ -9,10 +9,10 @@
     ]
   },
   "scripts": {
-    "start": "lerna run --parallel start",
-    "build": "lerna run build",
-    "serve": "lerna run --parallel serve",
-    "clean": "lerna run --parallel clean"
+    "start": "pnpm --filter --parallel start",
+    "build": "pnpm --filter build",
+    "serve": "pnpm --filter --parallel serve",
+    "clean": "pnpm --filter --parallel clean"
   },
   "devDependencies": {
     "lerna": "3.22.1"
