--- a/different-react-versions/package.json
+++ b/different-react-versions/package.json
@@ -7,10 +7,10 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=different-react-versions_app* --parallel start",
-    "build": "lerna run --scope=different-react-versions_app* build",
-    "serve": "lerna run --scope=different-react-versions_app* --parallel serve",
-    "clean": "lerna run --scope=different-react-versions_app* --parallel clean",
+    "start": "pnpm --filter different-react-versions_app* --parallel start",
+    "build": "pnpm --filter different-react-versions_app* build",
+    "serve": "pnpm --filter different-react-versions_app* --parallel serve",
+    "clean": "pnpm --filter different-react-versions_app* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
