--- a/federated-css/package.json
+++ b/federated-css/package.json
@@ -10,7 +10,6 @@
       "expose-remotes/expose-styled-component",
       "expose-remotes/expose-tailwind-css-global",
       "expose-remotes/expose-tailwind-css-module",
-
       "consumers-react/css-and-styled-component",
       "consumers-react/less-and-scss",
       "consumers-react/css-module-and-jss",
@@ -19,7 +18,6 @@
       "consumers-react/any-combination",
       "consumers-react/combination-of-5",
       "consumers-react/combination-of-4",
-
       "consumers-nextjs/jss-and-tailwind-global",
       "consumers-nextjs/jss-css-and-tailwind-module",
       "consumers-nextjs/less-and-styled-component",
@@ -28,23 +26,22 @@
     ]
   },
   "scripts": {
-    "build": "lerna run build",
-    "clean": "lerna run --parallel clean",
-    "start:expose-all": "lerna run --scope=@federated-css/{expose-css,expose-css-module,expose-jss,expose-less,expose-scss,expose-styled-component,expose-tailwind-css-global,expose-tailwind-css-module} --parallel start",
-    "start:react:css-styled-component": "lerna run --scope=@federated-css/css-and-styled-component --parallel start",
-    "start:react:less-scss": "lerna run --scope=@federated-css/less-and-scss --parallel start",
-    "start:react:css-module-and-jss": "lerna run --scope=@federated-css/css-module-and-jss --parallel start",
-    "start:react:tailwind-global-and-less": "lerna run --scope=@federated-css/tailwind-global-and-less --parallel start",
-    "start:react:tailwind-module-and-jss": "lerna run --scope=@federated-css/tailwind-module-and-jss --parallel start",
-    "start:react:combination-of-5": "lerna run --scope=@federated-css/combination-of-5 --parallel start",
-    "start:react:combination-of-4": "lerna run --scope=@federated-css/combination-of-4 --parallel start",
-    "start:react:any-combination": "node ./consumers-react/any-combination/execute.js && lerna run --scope=@federated-css/any-combination --parallel start",
-
-    "start:nextjs:combination-of-4": "lerna run --scope=@federated-css/next-combination-of-4 --parallel start",
-    "start:nextjs:any-combination": "node ./consumers-nextjs/any-combination/execute.js && lerna run --scope=@federated-css/next-any-combination --parallel start",
-    "start:nextjs:jss-tailwind-global": "lerna run --scope=@federated-css/next-jss-and-tailwind-global --parallel start",
-    "start:nextjs:jss-css-and-tailwind-module": "lerna run --scope=@federated-css/next-jss-css-and-tailwind-module --parallel start",
-    "start:nextjs:less-and-styled-component": "lerna run --scope=@federated-css/next-less-and-styled-component --parallel start"
+    "build": "pnpm --filter build",
+    "clean": "pnpm --filter --parallel clean",
+    "start:expose-all": "pnpm --filter @federated-css/{expose-css,expose-css-module --filter expose-jss --filter expose-less --filter expose-scss --filter expose-styled-component --filter expose-tailwind-css-global --filter expose-tailwind-css-module --parallel start",
+    "start:react:css-styled-component": "pnpm --filter @federated-css/css-and-styled-component --parallel start",
+    "start:react:less-scss": "pnpm --filter @federated-css/less-and-scss --parallel start",
+    "start:react:css-module-and-jss": "pnpm --filter @federated-css/css-module-and-jss --parallel start",
+    "start:react:tailwind-global-and-less": "pnpm --filter @federated-css/tailwind-global-and-less --parallel start",
+    "start:react:tailwind-module-and-jss": "pnpm --filter @federated-css/tailwind-module-and-jss --parallel start",
+    "start:react:combination-of-5": "pnpm --filter @federated-css/combination-of-5 --parallel start",
+    "start:react:combination-of-4": "pnpm --filter @federated-css/combination-of-4 --parallel start",
+    "start:react:any-combination": "node ./consumers-react/any-combination/execute.js && pnpm --filter @federated-css/any-combination --parallel start",
+    "start:nextjs:combination-of-4": "pnpm --filter @federated-css/next-combination-of-4 --parallel start",
+    "start:nextjs:any-combination": "node ./consumers-nextjs/any-combination/execute.js && pnpm --filter @federated-css/next-any-combination --parallel start",
+    "start:nextjs:jss-tailwind-global": "pnpm --filter @federated-css/next-jss-and-tailwind-global --parallel start",
+    "start:nextjs:jss-css-and-tailwind-module": "pnpm --filter @federated-css/next-jss-css-and-tailwind-module --parallel start",
+    "start:nextjs:less-and-styled-component": "pnpm --filter @federated-css/next-less-and-styled-component --parallel start"
   },
   "devDependencies": {
     "lerna": "3.22.1"
