--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -10,10 +10,10 @@
   },
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=federated-npm_* --parallel start",
-    "build": "lerna run build",
-    "serve": "lerna run --scope=federated-npm_* --parallel serve",
-    "clean": "lerna run --scope=federated-npm_* --parallel clean",
+    "start": "pnpm --filter federated-npm_* --parallel start",
+    "build": "pnpm --filter build",
+    "serve": "pnpm --filter federated-npm_* --parallel serve",
+    "clean": "pnpm --filter federated-npm_* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
