--- a/medusa-delegate-example/package.json
+++ b/medusa-delegate-example/package.json
@@ -11,7 +11,7 @@
     "serve:nav": "cd nav; yarn serve",
     "serve:search": "cd search; yarn serve",
     "serve:utils": "cd utils; yarn serve",
-    "clean": "lerna run --scope @dashboard-delegate/* --parallel clean"
+    "clean": "pnpm --filter --scope @dashboard-delegate/* --parallel clean"
   },
   "workspaces": {
     "packages": [
