--- a/react-16-17-18-ssr/package.json
+++ b/react-16-17-18-ssr/package.json
@@ -8,8 +8,8 @@
     "shell"
   ],
   "scripts": {
-    "start": "lerna run --parallel start",
-    "build": "lerna run build"
+    "start": "pnpm --filter --parallel start",
+    "build": "pnpm --filter build"
   },
   "devDependencies": {
     "lerna": "3.22.1"
