--- a/react-18-server-2-server/package.json
+++ b/react-18-server-2-server/package.json
@@ -7,10 +7,10 @@
     "app2"
   ],
   "scripts": {
-    "start": "lerna run --scope=react-18-server-2-server_* --parallel start",
-    "build": "lerna run --scope=react-18-server-2-server_* build",
-    "serve": "lerna run --scope=react-18-server-2-server_* --parallel serve",
-    "clean": "lerna run --scope=react-18-server-2-server_* --parallel clean",
+    "start": "pnpm --filter react-18-server-2-server_* --parallel start",
+    "build": "pnpm --filter react-18-server-2-server_* build",
+    "serve": "pnpm --filter react-18-server-2-server_* --parallel serve",
+    "clean": "pnpm --filter react-18-server-2-server_* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
