--- a/shared-routing/package.json
+++ b/shared-routing/package.json
@@ -10,10 +10,10 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=shared-routing_* --parallel start",
-    "build": "lerna run --scope=shared-routing_* build",
-    "serve": "lerna run --scope=shared-routing_* --parallel serve",
-    "clean": "lerna run --scope=shared-routing_* --parallel clean",
+    "start": "pnpm --filter shared-routing_* --parallel start",
+    "build": "pnpm --filter shared-routing_* build",
+    "serve": "pnpm --filter shared-routing_* --parallel serve",
+    "clean": "pnpm --filter shared-routing_* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
