--- a/typescript/package.json
+++ b/typescript/package.json
@@ -8,9 +8,9 @@
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter 'typescript_*' start",
-    "build": "lerna run --scope=typescript_* build",
-    "serve": "lerna run --scope=typescript_* --parallel serve",
-    "clean": "lerna run --scope=typescript_* --parallel clean",
+    "build": "pnpm --filter typescript_* build",
+    "serve": "pnpm --filter typescript_* --parallel serve",
+    "clean": "pnpm --filter typescript_* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
