--- a/vue2-in-vue3/package.json
+++ b/vue2-in-vue3/package.json
@@ -7,10 +7,10 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=vue2-in-vue3_vue* --parallel start",
-    "build": "lerna run --scope=vue2-in-vue3_vue* build",
-    "serve": "lerna run --scope=vue2-in-vue3_vue* --parallel serve",
-    "clean": "lerna run --scope=vue2-in-vue3_vue* --parallel clean",
+    "start": "pnpm --filter vue2-in-vue3_vue* --parallel start",
+    "build": "pnpm --filter vue2-in-vue3_vue* build",
+    "serve": "pnpm --filter vue2-in-vue3_vue* --parallel serve",
+    "clean": "pnpm --filter vue2-in-vue3_vue* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
