--- a/vue3-demo/package.json
+++ b/vue3-demo/package.json
@@ -7,10 +7,10 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=vue3-demo_* --parallel start",
-    "build": "lerna run --scope=vue3-demo_* build",
-    "serve": "lerna run --scope=vue3-demo_* --parallel serve",
-    "clean": "lerna run --scope=vue3-demo_* --parallel clean",
+    "start": "pnpm --filter vue3-demo_* --parallel start",
+    "build": "pnpm --filter vue3-demo_* build",
+    "serve": "pnpm --filter vue3-demo_* --parallel serve",
+    "clean": "pnpm --filter vue3-demo_* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
