--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next;next dev",
+    "dev": "rm -rf .next; next dev",
     "build": "next build",
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^7.0.4",
+    "@module-federation/nextjs-mf": "^8.0.1-4",
     "lodash": "4.17.21",
-    "next": "13.3.0",
+    "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "5.80.0"
