--- a/advanced-api/dynamic-remotes-synchronous-imports/package.json
+++ b/advanced-api/dynamic-remotes-synchronous-imports/package.json
@@ -11,7 +11,7 @@
     "build": "pnpm --filter dynamic-remotes-synchronous-imports_app* --parallel build",
     "serve": "pnpm --filter dynamic-remotes-synchronous-imports_app* --parallel serve",
     "clean": "pnpm --filter dynamic-remotes-synchronous-imports_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "3.22.1",
