--- a/angular11-microfrontends-ngxs/angular.json
+++ b/angular11-microfrontends-ngxs/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "cli": {
     "analytics": false,
-    "packageManager": "yarn"
+    "packageManager": "pnpm"
   },
   "newProjectRoot": "projects",
   "projects": {
