--- a/apollo-client/app1/package.json
+++ b/apollo-client/app1/package.json
@@ -2,9 +2,9 @@
   "name": "@apollo-client/app1",
   "version": "0.0.0",
   "scripts": {
-    "start": "yarn build && yarn serve",
+    "start": "pnpm build && pnpm serve",
     "serve": "node dist/server/main.js",
-    "build": "yarn build:server && yarn build:client",
+    "build": "pnpm build:server && pnpm build:client",
     "build:client": "rimraf dist/client && webpack --mode production --progress --config config/webpack.client.js",
     "build:server": "rimraf dist/server && webpack --mode production --progress --config config/webpack.server.js"
   },
