--- a/basic-host-remote/app1/package.json
+++ b/basic-host-remote/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-app1-sin",
+  "name": "basic-host-remote_basic-app1-sin",
   "version": "0.1.0",
   "scripts": {
     "reset": "npx rimraf ./**/node_modules",
