--- a/basic-host-remote/package.json
+++ b/basic-host-remote/package.json
@@ -7,11 +7,11 @@
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently 'cd app1; yarn dev' 'cd app2; yarn dev'",
-    "build": "concurrently 'cd app1; yarn build' 'cd app2; yarn build'",
-    "serve": "concurrently 'cd app1; yarn serve' 'cd app2; yarn serve'",
-    "clean": "concurrently 'cd app1; yarn reset' 'cd app2; yarn reset'",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "start": "concurrently 'cd app1; pnpm dev' 'cd app2; pnpm dev'",
+    "build": "concurrently 'cd app1; pnpm build' 'cd app2; pnpm build'",
+    "serve": "concurrently 'cd app1; pnpm serve' 'cd app2; pnpm serve'",
+    "clean": "concurrently 'cd app1; pnpm reset' 'cd app2; pnpm reset'",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
