chore: fix lerna issues

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
       "./federated-css-react-ssr/*",
       "./federated-css-react-ssr",
       "./advanced-api/dynamic-remotes/*",
+      "./angular15-vue3",
+      "./angular15-vue3/*",
       "./angular-universal-ssr",
       "./angular-universal-ssr/*",
       "./angular11-microfrontends-ngrx",
