chore: fix lerna issues

--- a/nextjs-v13/shared/package.json
+++ b/nextjs-v13/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-shared",
+  "name": "nextjs-shared-v13",
   "version": "1.0.0",
   "license": "MIT",
   "module": "./index.js",
