--- a/federated-css/package.json
+++ b/federated-css/package.json
@@ -1,5 +1,7 @@
 {
   "private": true,
+  "version": "1.2.3",
+  "name": "federated-css-mono",
   "workspaces": {
     "packages": [
       "expose-remotes/expose-css",
