--- a/package.json
+++ b/package.json
@@ -188,13 +188,17 @@
     "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "7.1.5",
+    "lerna": "^6.6.2",
     "mocha": "10.2.0",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
+  "resolutions": {
+    "lerna": "^6.6.2"
+  },
   "scripts": {
+
     "list:all": "node repotools.js",
     "list:changed": "node repotools.js --since=origin/master",
     "bootstrap": "lerna bootstrap --ignore-scripts",
