--- a/complete-react-case/main-app/package.json
+++ b/complete-react-case/main-app/package.json
@@ -6,7 +6,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "webpack": "webpack --watch",
-    "serve": "serve dist -p 3002",
+    "serve": "serve dist -p 3002 --cors",
     "start": "concurrently \"npm run webpack\" \"npm run serve\""
   },
   "keywords": [],
