--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
   "version": "0.0.0",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
