--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
       "./federated-css-react-ssr/*",
       "./federated-css-react-ssr",
       "./advanced-api/dynamic-remotes/*",
-      "./angular15-vue3",
       "./angular15-vue3/*",
       "./angular-universal-ssr",
       "./angular-universal-ssr/*",
@@ -37,126 +36,7 @@
       "./angular15-microfrontends-lazy-components",
       "./apollo-client",
       "./basic-host-remote",
-      "./basic-host-remote/*",
-      "./bi-directional",
-      "./bi-directional/*",
-      "./complete-react-case",
-      "./complete-react-case/*",
-      "./comprehensive-demo-react16",
-      "./comprehensive-demo-react16/*",
-      "./comprehensive-demo-react18",
-      "./comprehensive-demo-react18/*",
-      "./cra",
-      "./cra/*",
-      "./css-isolation",
-      "./css-isolation/*",
-      "./cypress",
-      "./dashboard-example/*",
-      "./delegate-modules",
-      "./delegate-modules/*",
-      "./different-react-versions-16-17-typescript",
-      "./different-react-versions-16-17",
-      "./different-react-versions-16-18-typescript",
-      "./different-react-versions-16-18",
-      "./different-react-versions-isolated",
-      "./different-react-versions-isolated/*",
-      "./different-react-versions-typescript",
-      "./different-react-versions-typescript/*",
-      "./different-react-versions",
-      "./different-react-versions/*",
-      "./dynamic-system-host",
-      "./dynamic-system-host/*",
-      "./federated-npm",
-      "./federated-npm/*",
-      "./genesis",
-      "./genesis/*",
-      "./loadable-react-18",
-      "./loadable-react-18/*",
-      "./loadable-react-spectrum",
-      "./loadable",
-      "./native-federation-tests-typescript-plugins",
-      "./native-federation-tests-typescript-plugins/*",
-      "./nested",
-      "./nested/*",
-      "./nextjs-bi-directional/*",
-      "./nextjs-react",
-      "./nextjs-react/*",
-      "./nextjs-sidecar/*",
-      "./nextjs-ssr",
-      "./nextjs-ssr/*",
-      "./nextjs-ssr-react-query",
-      "./react-16-17-18-ssr",
-      "./react-18-code-splitting",
-      "./react-18-code-splitting/*",
-      "./react-18-server-2-server",
-      "./react-18-server-2-server/*",
-      "./react-18-ssr",
-      "./react-hmr",
-      "./react-hmr/*",
-      "./react-in-vue",
-      "./react-in-vue/*",
-      "./react-nested-routers",
-      "./react-nested-routers/*",
-      "./react-nextjs/nextjs-host-react-remote",
-      "./react-nextjs/nextjs-host-react-remote/*",
-      "./react-nextjs/react-host-nextjs-remote",
-      "./react-nextjs/react-host-nextjs-remote/*",
-      "./react-nextjs/react-host-remote",
-      "./react-nextjs/react-host-remote/*",
-      "./react-spectrum",
-      "./redux-reducer-injection",
-      "./redux-reducer-injection/*",
-      "./self-healing",
-      "./self-healing/*",
-      "./server-side-render-only",
-      "./server-side-rendering",
-      "./server-side-rendering/*",
-      "./shared-context",
-      "./shared-context/*",
-      "./shared-routes2",
-      "./shared-routes2/*",
-      "./shared-routing",
-      "./shared-routing/*",
-      "./shared-store-cross-framework",
-      "./shared-store-cross-framework/*",
-      "./startup-code",
-      "./startup-code/*",
-      "./styled-components",
-      "./third-party-scripts",
-      "./third-party-scripts/*",
-      "./typescript-monorepo",
-      "./typescript-monorepo/*",
-      "./typescript-project-references",
-      "./typescript-project-references/*",
-      "./typescript-react-fallback",
-      "./typescript-react-fallback/*",
-      "./umd-federation",
-      "./umd-federation/*",
-      "./version-discrepancy",
-      "./version-discrepancy/*",
-      "./vite-react-microfrontends",
-      "./vite-react-microfrontends/*",
-      "./vite-react-simple",
-      "./vite-react-simple/*",
-      "./vite-svelte-microfrontends",
-      "./vite-svelte-microfrontends/*",
-      "./vite-vue-microfrontends",
-      "./vite-vue-microfrontends/*",
-      "./vue-cli/*",
-      "./vue2-in-vue3",
-      "./vue2-in-vue3/*",
-      "./vue3-demo-federation-with-vite",
-      "./vue3-demo-federation-with-vite/*",
-      "./vue3-demo",
-      "./vue3-demo/*",
-      "./modernjs",
-      "./modernjs/*",
-      "./medusa-example",
-      "./medusa-example/*",
-      "./medusa-delegate-example",
-      "./medusa-delegate-example/*",
-      "./modernjs-medusa",
-      "./modernjs-medusa/*"
+      "./basic-host-remote/*"
     ],
     "nohoist": [
       "**/@types",
@@ -188,17 +68,13 @@
     "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "^6.6.2",
+    "lerna": "^7.4.1",
     "mocha": "10.2.0",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
-  "resolutions": {
-    "lerna": "^6.6.2"
-  },
   "scripts": {
-
     "list:all": "node repotools.js",
     "list:changed": "node repotools.js --since=origin/master",
     "bootstrap": "lerna bootstrap --ignore-scripts",
@@ -207,7 +83,6 @@
     "prettier": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "test": "jest test/index.spec.js --maxWorkers=2",
-    "postinstall": "git pull --recurse-submodules",
     "cypress:debug": "cypress open --e2e --config-file cypress/config/cypress.config.ts --browser=chrome",
     "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome",
     "report:generate": "allure generate ./cypress/results/allure-results --clean -o ./cypress/report",
