--- a/package.json
+++ b/package.json
@@ -21,22 +21,55 @@
       "./federated-css-react-ssr/*",
       "./federated-css-react-ssr",
       "./advanced-api/dynamic-remotes/*",
-      "./angular15-vue3/*",
-      "./angular-universal-ssr",
-      "./angular-universal-ssr/*",
-      "./angular11-microfrontends-ngrx",
-      "./angular11-microfrontends-ngrx/*",
-      "./angular11-microfrontends-ngxs",
-      "./angular11-microfrontends-ngxs/*",
-      "./angular11-microfrontends-scully",
-      "./angular11-microfrontends-scully/*",
-      "./angular12-microfrontends",
-      "./angular14-react",
-      "./angular14-react/*",
-      "./angular15-microfrontends-lazy-components",
       "./apollo-client",
       "./basic-host-remote",
-      "./basic-host-remote/*"
+      "./basic-host-remote/*",
+      "./bi-directional",
+      "./bi-directional/*",
+      "./complete-react-case",
+      "./complete-react-case/*",
+      "./comprehensive-demo-react16",
+      "./comprehensive-demo-react16/*",
+      "./comprehensive-demo-react18",
+      "./comprehensive-demo-react18/*",
+      "./cra",
+      "./cra/*",
+      "./css-isolation",
+      "./css-isolation/*",
+      "./cypress",
+      "./delegate-modules",
+      "./delegate-modules/*",
+      "./different-react-versions-16-17-typescript",
+      "./different-react-versions-16-17",
+      "./different-react-versions-16-18-typescript",
+      "./different-react-versions-16-18",
+      "./different-react-versions-isolated",
+      "./different-react-versions-isolated/*",
+      "./different-react-versions-typescript",
+      "./different-react-versions-typescript/*",
+      "./different-react-versions",
+      "./different-react-versions/*",
+      "./dynamic-system-host",
+      "./dynamic-system-host/*",
+      "./federated-npm",
+      "./federated-npm/*",
+      "./genesis",
+      "./genesis/*",
+      "./loadable-react-18",
+      "./loadable-react-18/*",
+      "./native-federation-tests-typescript-plugins",
+      "./native-federation-tests-typescript-plugins/*",
+      "./nested",
+      "./nested/*",
+      "./nextjs-react",
+      "./nextjs-react/*",
+      "./nextjs-ssr",
+      "./nextjs-ssr/*",
+      "./nextjs-ssr/*",
+      "./nextjs-ssr-react-query",
+      "./react-16-17-18-ssr",
+      "./react-18-code-splitting",
+      "./react-18-code-splitting/*"
     ],
     "nohoist": [
       "**/@types",
