--- a/nextjs-ssr-react-query/tsconfig.base.json
+++ b/nextjs-ssr-react-query/tsconfig.base.json
@@ -16,10 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@acme/domain": ["libs/domain/src/index.ts"],
+      "@button/*": ["apps/button/*"],
       "@header/*": ["apps/header/*"],
       "@host/*": ["apps/host/*"],
-      "@plp/*": ["apps/plp/*"],
-      "@button/*": ["apps/button/*"]
+      "@plp/*": ["apps/plp/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
